--- a/confluent/etc/schema-registry/connect-avro-standaloneORIG.properties
+++ b/confluent/etc/schema-registry/connect-avro-standaloneORIG.properties
@@ -48,11 +48,4 @@ offset.storage.file.filename=/tmp/connect.offsets
 # plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
 # Replace the relative path below with an absolute path if you are planning to start Kafka Connect from within a
 # directory other than the home directory of Confluent Platform.
-#plugin.path=share/java,/home/gio/Documents/_applications/confluent-5.5.1/share/confluent-hub-components
-
-# GCosmiano Aug 2020
-# https://github.com/lensesio/kafka-connect-ui
-# https://docs.confluent.io/current/schema-registry/installation/config.html
-access.control.allow.methods=GET,POST,PUT,DELETE,OPTIONS
-access.control.allow.origin=*
-plugin.path=/home/gio/Documents/_applications/confluent-5.5.1/share/java,/home/gio/Documents/_applications/confluent-5.5.1/share/confluent-hub-components,/home/gio/Documents/_applications/confluent-5.5.1/plugins
+plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
