--- a/confluent/etc/kafka/connect-mongodb-source.properties
+++ b/confluent/etc/kafka/connect-mongodb-source.properties
@@ -13,13 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# GCosmiano Aug 2020
+# use the mongo primary node port number
+# mongodb.hosts=mongoReplicaSets/localhost:27017
 name=mongo-source-connector
 connector.class=io.debezium.connector.mongodb.MongoDbConnector
 tasks.max=1
 initial.sync.max.threads=1
 mongodb.hosts=mongoReplicaSets/localhost:27017
 mongodb.name=mongoConn
-# topic=mongoConn.sampleGioDB.books
+topic=mongoConn.sampleGioDB.books
 
 # Topic name must be in the form `logicalName.databaseName.collectionName` - https://debezium.io/documentation/reference/1.2/connectors/mongodb.html#mongodb-topic-names
 # Kafka Debezium Connector for MongoDB - https://debezium.io/documentation/reference/1.2/connectors/mongodb.html
