--- a/confluent/etc/kafka/connect-standalone-ORIG.properties
+++ b/confluent/etc/kafka/connect-standalone-ORIG.properties
@@ -37,11 +37,4 @@ offset.flush.interval.ms=10000
 # c) directories immediately containing the package directory structure of classes of plugins and their dependencies
 # Note: symlinks will be followed to discover dependencies or plugins.
 # Examples: 
-# plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
-
-# GCosmiano Aug 2020
-# https://github.com/lensesio/kafka-connect-ui
-# https://docs.confluent.io/current/schema-registry/installation/config.html
-access.control.allow.methods=GET,POST,PUT,DELETE,OPTIONS
-access.control.allow.origin=*
-plugin.path=/home/gio/Documents/_applications/confluent-5.5.1/share/java,/home/gio/Documents/_applications/confluent-5.5.1/share/confluent-hub-components,/home/gio/Documents/_applications/confluent-5.5.1/plugins
+plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
